BuildHughes/translation-tool/inputs/source_meta/objects/Common_RecurringPayment__c.object
<CustomObject>
    <description>This will store the Recurring Payment record of customer.
Created as part of REQ-00500.</description>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Recurring Payments</relationshipLabel>
        <relationshipName>Recurring_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hsvc_AcceptedTermsOfUse__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field shows if the user has Accepted Terms of Use</description>
        <label>Accepted Terms of Use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hsvc_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Recurring Payments</relationshipLabel>
        <relationshipName>Recurring_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hsvc_ApplicableCountry__c</fullName>
        <description>This determines the country of the record.</description>
        <label>Applicable Country</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hsvc_BillingIdentity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Identity</label>
        <referenceTo>HSvc_Billing_Identity__c</referenceTo>
        <relationshipLabel>Recurring Payments</relationshipLabel>
        <relationshipName>Recurring_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hsvc_CardAboutToExpire__c</fullName>
        <formula>(YEAR(TODAY())= VALUE(&apos;20&apos;+Hsvc_ExpirationYear__c ) &amp;&amp;  VALUE(Hsvc_ExpirationMonth__c)-MONTH(TODAY())&lt;=3) || (YEAR(TODAY())!= VALUE(&apos;20&apos;+Hsvc_ExpirationYear__c ) &amp;&amp;  (12+VALUE(Hsvc_ExpirationMonth__c))-MONTH(TODAY())&lt;=3)</formula>
        <label>CardAboutToExpire?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hsvc_CardStatus__c</fullName>
        <label>Card Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>APPROVED</fullName>
                </value>
                <value>
                    <fullName>PENDING</fullName>
                </value>
                <value>
                    <fullName>DECLINED</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hsvc_ContentOfTerms__c</fullName>
        <description>This field contains the content of Terms and Condition shown during setup of Recurring Payment.</description>
        <label>Content of Terms</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hsvc_CreditCardNumber__c</fullName>
        <description>This field stores the credit card number for Recurring Payment</description>
        <label>Credit Card Number</label>
        <length>16</length>
        <maskChar>asterisk</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Hsvc_CreditCardType__c</fullName>
        <description>This field determine the credit card type</description>
        <label>Credit Card Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hsvc_ExpirationMonth__c</fullName>
        <description>This will contain the Expiry Month of the Credit Card</description>
        <label>Expiration Month</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hsvc_ExpirationYear__c</fullName>
        <label>Expiration Year</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hsvc_IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will determine which Recurring Payment is currently being used.</description>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hsvc_OperationPerformed__c</fullName>
        <label>Operation performed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ADD</fullName>
                </value>
                <value>
                    <fullName>CANCEL</fullName>
                </value>
                <value>
                    <fullName>UPDATE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hsvc_RecurringPaymentMethod__c</fullName>
        <description>This field keeps the Payment Option for Recurring Payment.</description>
        <label>Recurring Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hsvc_Status__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field determines if the record is active or not.</description>
        <label>Status</label>
        <type>Checkbox</type>
    </fields>
    <label>Recurring Payment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Hsvc_ExpirationYear__c</columns>
        <columns>Hsvc_IsActive__c</columns>
        <columns>Hsvc_CreditCardNumber__c</columns>
        <columns>Hsvc_ExpirationMonth__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>Hsvc_Account__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>RP-{00000}</displayFormat>
        <label>Recurring Payment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recurring Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>